@@ -1,3 +1,7 @@
+=item 0.12 - November 16, 1998
+
+added directive handler interface
+ 
 =item 0.11 - February 20, 1998
 
 added typemap to MANIFEST so the darn thing will build,
